clean UP - PMD & FindBugs